# lobster-rs

./: .gitattributes  .gitignore  Cargo.toml  DISCLAIMER.md  README.md  build.nix  default.nix  flake.nix  install  result
.github/workflows/: build.yaml  main.yaml  master.yaml  release.yaml
src/: cli.rs  main.rs
src/cli/: cli.rs  mod.rs  stream.rs
src/flixhq/: flixhq.rs  html.rs  mod.rs  search.rs
src/providers/: mod.rs  vidcloud.rs
src/utils/: config.rs  decrypt.rs  ffmpeg.rs  fzf.rs  history.rs  image_preview.rs  logging.rs  mod.rs  mpv.rs  presence.rs  rofi.rs
src/utils/players/: celluloid.rs  iina.rs  mod.rs  mpv.rs  vlc.rs
